# vim: set noexpandtab:

2014-04-02 Steve
	* Added deprecation warnings to SusyNtTools methods: buildSumwMap and getEventWeight
		* Users should update to usage of the MCWeighter class,
		  as demonstrated in the Susy3LepCutflow class

2014-03-26 Steve
	* Moved JVF sys enums to SusyNtSys
		* Kinda goes against my thinking that this enum should
		  only be for variations that are saved in the ntuple,
		  but otherwise I'd have to add an additional sys enum
		  argument to the selectObjects methods, so this is
		  cleaner to the user
	* Added JVF systematic to SusyNtTools
		* JVFUncertaintyTool instantiated in SusyNtTools
		* Controlled via usual object syst enum, SusyNtSys,
		  when calling selectObjects method
		* I had to make some of the jet counting methods
		  (and getMetRel) non-static to accommodate the usage
		  of the JVFUncertaintyTool

2014-03-25 Steve
	* Added JVF sys enums to SusyDefs.h

2014-03-21 Steve
	* Added JVFUncertaintyTool to installMinimalSUSYTools script,
	  necessary for applying the JVF systematic

2014-03-08 Steve
	* Updated MCWeighter
		* Now accepts a TTree for building the sumw map,
		  and has dedicated methods for TTree and TChain
		* TTree arg to constructor no longer default
	* Updated usage of MCWeighter in Susy3LepCutflow
		* Now instantiated and initialized in Init method rather than main.
		  It cannot be initialized in Begin because the tree pointer isn't set.
		  	* This is just one way to initialize the MCWeighter.
			* NOTE: This is explicitly incompatible with PROOF. But then
			  again, I don't think the rest of our code is PROOF-compatible
			  anyway.
	* MCWeighter TODO
		* Update usage in Susy2LepCutflow
		* Change SusyNtAna and SusyNtTools methods to use 
		  MCWeighter behind the scenes.
	* Added second version of template dumpObjects method to SusyNtTools,
	  a version for vectors of objects as well as the original one for
	  vectors of object pointers.

2014-03-03 Steve
	* Code improvements for MCWeighter
