@@ -82,6 +82,8 @@ class SusyNtAna : public TSelector, public SusyNtTools
     void clearObjects();
     void selectObjects(SusyNtSys sys = NtSys_NOM, bool removeLepsFromIso=false, 
                        TauID signalTauID=TauID_medium, bool n0150BugFix = false);
+    void selectObjectsMonojet(SusyNtSys sys = NtSys_NOM, bool removeLepsFromIso=false, 
+			      TauID signalTauID=TauID_medium, bool n0150BugFix = false);
 
     // Cleaning cuts
     int cleaningCutFlags();
