@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2014-07-30 Doug	
+	* Add methods for the monojet analysis
+	
 2014-04-02 Steve
 	* Added deprecation warnings to SusyNtTools methods: buildSumwMap and getEventWeight
 		* Users should update to usage of the MCWeighter class,
